fix broken css

--- a/OsloMetParent/styles/head.less
+++ b/OsloMetParent/styles/head.less
@@ -57,23 +57,11 @@
 			}
 		}
 
-		.pkp_navigation_user_wrapper {
-			text-shadow: 1px 1px 0px black;
-			.profile {
-				// add dead area below the links
-				//background: transparent;
-				//padding: .5rem; 
-				a {
-					//background: rgba(0,0,0,0.4);
-					//margin: .25rem;
-					//border-radius: .25rem;
-					//padding: .1rem .3rem;
-					//text-align: center;
-
-					&:hover,
-					&:focus {
-					//	background: rgba(0,0,0,0.8);
-					}
+		.pkp_navigation_user {
+			
+			& > .profile {
+				text-shadow: 1px 1px 0px black;
+				font-weight: bold;	
 				}
 			}
 		}
